<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30dp">

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/radiobtn_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/choose1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose1_1" />

            <RadioButton
                android:id="@+id/choose1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose1_2" />

            <RadioButton
                android:id="@+id/choose1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose1_3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2" />

        <CheckBox
            android:id="@+id/choose2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose2_1" />

        <CheckBox
            android:id="@+id/choose2_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose2_2" />

        <CheckBox
            android:id="@+id/choose2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose2_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:text="@string/btn_reset"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/submit_quiz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_quiz" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>